# FastAPI-realtime-playground

./: .env_copy  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  run_all.sh
products/: decorators.py  exceptions.py  managers.py  schema.py  services.py  views.py
src/: main.py
src/api/graphql/: resolvers.py  schemas.py
src/api/rest/product/: decorators.py  views.py
src/api/rest/user/: decorators.py  dependencies.py  views.py
src/core/product/: entities.py  services.py
src/core/user/: entities.py  services.py
src/products/: decorators.py  managers.py  schema.py  services.py  views.py
src/users/: decorators.py  dependencies.py  managers.py  schema.py  services.py  views.py
users/: decorators.py  dependencies.py  exceptions.py  managers.py  permissions.py  schema.py  services.py  views.py
